--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,19 @@
 <div class="footer">
+  <div class="footer-top-bar">
+    <!-- Custom Input -->
+    <div class="custom-input-box">
+      <p>Newsletter</p>
+      <input type="email" placeholder="Email Address" />
+      <button class="mbtn mbtn__primary">Send</button>
+    </div>
+
+    <img src="assets/img/logo.png" alt="logo" class="logo-img" />
+
+    <div>
+      <p>Parents Corner</p>
+      <p>VISIT NOW &#8594;</p>
+    </div>
+  </div>
   <hr class="style-dotted-footer" />
   <nav>
     <ul>
@@ -14,4 +29,24 @@
     </ul>
   </nav>
   <hr class="style-dotted-footer" />
+  <nav class="footer-secondary-nav">
+    <ul>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Gallery</a></li>
+      <li><a href="#">Career at small wonders</a></li>
+      <li><a href="#">Admission form</a></li>
+      <li><a href="#">Schedule a tour</a></li>
+      <li><a href="#">Shoonya</a></li>
+    </ul>
+  </nav>
+
+  <div class="footer-info-bar">
+    <span> &#169;2019 SMALL WONDERS. All rights reserved.</span>
+    <div class="footer-info-bar__icons">
+      <i class="fa fa-facebook-official icon-margins" aria-hidden="true"></i>
+      <i class="fa fa-instagram icon-margins" aria-hidden="true"></i>
+      <i class="fa fa-youtube icon-margins" aria-hidden="true"></i>
+    </div>
+    <span>Made with &#10084; by SAM WEB STUDIO</span>
+  </div>
 </div>
