--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
       <button class="mbtn mbtn__secondary">{{ contactButtonText }}</button>
     </div>
     <!-- logo -->
-    <img src="assets/img/logo.png" alt="" class="logo-img" />
+    <img src="assets/img/logo.png" alt="logo" class="logo-img" />
     <!-- fa icons -->
     <div class="header-info-container__right">
       <i class="fa fa-facebook-official icon-margins" aria-hidden="true"></i>
