--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -1,5 +1,9 @@
 @import "./variables.scss";
 
+body {
+  margin: 0;
+}
+
 .navbar-container {
   background: $white-primary;
   height: 5em;
@@ -12,14 +16,14 @@ ul {
   display: flex;
   justify-content: space-around;
   margin: 0 8%;
-}
 
-li {
-  margin: 0.25em 0;
-  a {
-    color: $dark-primary;
-    font-weight: 700;
-    text-decoration: none;
+  li {
+    margin: 0.25em 0;
+    a {
+      color: $dark-primary;
+      font-weight: 700;
+      text-decoration: none;
+    }
   }
 }
 
@@ -62,10 +66,12 @@ hr.style-dotted {
   width: 150px;
   height: auto;
   position: absolute;
-  margin-left: -75px;
+  margin-left: -90px;
   left: 50%;
   background: $white-primary;
   z-index: 1000;
+  padding: 1%;
+  border-radius: 20px;
 }
 
 .icon-margins {
@@ -78,6 +84,7 @@ hr.style-dotted {
   margin-top: 20%;
   width: 100%;
   color: $white-primary;
+  padding: 1% 0;
 
   li {
     a {
@@ -86,8 +93,52 @@ hr.style-dotted {
   }
 }
 
+.footer-top-bar {
+  display: flex;
+  justify-content: space-between;
+  margin: 2% 8%;
+  height: 8em;
+}
+
+.footer-secondary-nav {
+  ul {
+    margin: 0 15%;
+
+    li {
+      a {
+        font-weight: 600;
+      }
+    }
+  }
+}
+
+.footer-info-bar {
+  display: flex;
+  justify-content: space-between;
+  margin: 1% 8%;
+
+  &__icons {
+    margin-left: -5em;
+  }
+}
+
 hr.style-dotted-footer {
   background-color: $blue-primary;
   border-top: 1.5px dashed $white-primary;
   border-bottom: none;
+  margin: 1% 8%;
+}
+
+.custom-input-box {
+  input {
+    font-size: 1em;
+    border-radius: 20px;
+    border: 0;
+    padding: 0.6em 2em;
+  }
+
+  button {
+    position: relative;
+    right: 3em;
+  }
 }
