--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -6,7 +6,7 @@ body {
 
 .navbar-container {
   background: $white-primary;
-  height: 5em;
+  margin-bottom: 4%;
   width: 100%;
 }
 
@@ -140,5 +140,12 @@ hr.style-dotted-footer {
   button {
     position: relative;
     right: 3em;
+  }
+}
+
+.picsum-img-wrapper {
+  img {
+    width: 100%;
+    height: 40%;
   }
 }
