routes and pages added

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,1 @@
-<app-carousel-image-section></app-carousel-image-section>
+<app-carousel-image-section [images]="images"></app-carousel-image-section>
