--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,21 @@
 <div class="navbar-container">
   <nav>
     <ul>
-      <li><i class="fa fa-home" aria-hidden="true"></i></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Curriculum</a></li>
-      <li><a href="#">Admissions</a></li>
-      <li><a href="#">Franchise</a></li>
-      <li><a href="#">Branches</a></li>
-      <li><a href="#">Books & Beyond</a></li>
-      <li><a href="#">Events & Gallery</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li>
+        <i
+          class="fa fa-home pointer-icon"
+          aria-hidden="true"
+          (click)="navigateToHome()"
+        ></i>
+      </li>
+      <li><a [routerLink]="['/about-us']">About Us</a></li>
+      <li><a [routerLink]="['/curriculum']">Curriculum</a></li>
+      <li><a [routerLink]="['/admissions']">Admissions</a></li>
+      <li><a [routerLink]="['/franchise']">Franchise</a></li>
+      <li><a [routerLink]="['/']">Branches</a></li>
+      <li><a [routerLink]="['/books-and-beyond']">Books & Beyond</a></li>
+      <li><a [routerLink]="['/events-and-gallery']">Events & Gallery</a></li>
+      <li><a [routerLink]="['/']">Contact Us</a></li>
     </ul>
   </nav>
   <hr class="style-dotted" />
