--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -4,10 +4,18 @@ body {
   margin: 0;
 }
 
+.pointer-icon {
+  cursor: pointer;
+}
+
 .navbar-container {
   background: $white-primary;
   margin-bottom: 4%;
   width: 100%;
+
+  nav {
+    margin-top: 0.5em;
+  }
 }
 
 ul {
@@ -47,6 +55,8 @@ ul {
 hr.style-dotted {
   background-color: $white-primary;
   border-top: 1.5px dashed $dark-primary;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 .header-info-container {
@@ -143,9 +153,10 @@ hr.style-dotted-footer {
   }
 }
 
+.standard-img-wrapper,
 .picsum-img-wrapper {
   img {
     width: 100%;
-    height: 40%;
+    height: 25em;
   }
 }
