about us nav block

--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -8,6 +8,10 @@ body {
   cursor: pointer;
 }
 
+.relative {
+  position: relative;
+}
+
 .navbar-container {
   background: $white-primary;
   margin-bottom: 3em;
