--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,7 @@
-<div class="footer">
+<!-- <div class="footer">
   <div class="footer-top-bar">
-    <!-- Custom Input -->
     <div class="custom-input-box">
-      <p>Newsletter</p>
+      <h3>Newsletter</h3>
       <input type="email" placeholder="Email Address" />
       <button class="mbtn mbtn__primary">Send</button>
     </div>
@@ -10,7 +9,7 @@
     <img src="assets/img/logo.png" alt="logo" class="logo-img" />
 
     <div>
-      <p>Parents Corner</p>
+      <h3>Parents Corner</h3>
       <p>VISIT NOW &#8594;</p>
     </div>
   </div>
@@ -48,5 +47,109 @@
       <i class="fa fa-youtube icon-margins" aria-hidden="true"></i>
     </div>
     <span>Made with &#10084; by SAM WEB STUDIO</span>
+  </div>
+</div> -->
+
+<div class="footerNew">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-4">
+        <h3>Newsletter</h3>
+        <div class="input-group">
+          <input
+            type="email"
+            placeholder="Email Address"
+            required="required"
+            aria-required="true"
+            class="form-control"
+          />
+          <div class="input-group-append">
+            <button type="button" class="btn rounded-button">Send</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 text-center">
+        <img src="assets/img/logo.png" alt="logo" class="logo-img-footer" />
+      </div>
+      <div class="col-md-4 text-right">
+        <h3>Parents Corner</h3>
+        <p>VISIT NOW &#8594;</p>
+      </div>
+    </div>
+
+    <div class="footerNew-secondary-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link"><i class="fa fa-home"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="/about" class="nav-link" target="_self">About Us </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Curriculum </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Admissions </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Franchise </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Branches </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Books &amp; Beyond </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self">
+            Events &amp; Gallery
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Contact Us</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footerNew-third-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link"> Blog </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self">
+            Career at small wonders
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Admission form </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Schedule a tour </a>
+        </li>
+        <li class="nav-item">
+          <a href="/#" class="nav-link" target="_self"> Shoonya </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="row align-items-center footerNew-fourth-nav">
+      <div class="col-md-4">
+        <span> &#169;2019 SMALL WONDERS. All rights reserved.</span>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="footer-info-bar">
+          <a href=""
+            ><i class="fa fa-facebook-official" aria-hidden="true"></i
+          ></a>
+          <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-md-4 text-right">
+        <span>Made with &#10084; by SAM WEB STUDIO</span>
+      </div>
+    </div>
   </div>
 </div>
