--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  font-family: "Nunito", sans-serif;
 }
 
 .pointer-icon {
@@ -12,6 +13,11 @@ body {
   position: relative;
 }
 
+h3,
+h4 {
+  font-family: "Cabin Sketch", cursive;
+}
+
 .navbar-container {
   background: $white-primary;
   margin-bottom: 3em;
@@ -19,30 +25,30 @@ body {
 
   nav {
     margin-top: 0.5em;
-  }
-}
 
-ul {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-  margin: 0 8%;
+    ul {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      justify-content: space-around;
+      margin: 0 8%;
 
-  li {
-    margin: 0.25em 0;
-    a {
-      color: $dark-primary;
-      font-weight: 700;
-      text-decoration: none;
+      li {
+        margin: 0.25em 0;
+        a {
+          color: $dark-primary;
+          font-weight: 700;
+          text-decoration: none;
 
-      &:hover {
-        font-weight: 700;
-        color: $dark-primary;
-        text-decoration: none;
-        background: #e8e7e7;
-        padding: 0.25em 0.4em;
-        border-radius: 20px;
+          &:hover {
+            font-weight: 700;
+            color: $dark-primary;
+            text-decoration: none;
+            background: #e8e7e7;
+            padding: 0.25em 0.4em;
+            border-radius: 20px;
+          }
+        }
       }
     }
   }
@@ -109,7 +115,8 @@ hr.style-dotted {
 
 // TODO
 .footer {
-  background: $blue-primary;
+  // background: $blue-primary;
+  background: url(/assets/img/footer-background.png) repeat;
   margin-top: 20%;
   width: 100%;
   color: $white-primary;
@@ -141,15 +148,15 @@ hr.style-dotted {
   }
 }
 
-.footer-info-bar {
-  display: flex;
-  justify-content: space-between;
-  margin: 1% 8%;
+// .footer-info-bar {
+//   display: flex;
+//   justify-content: space-between;
+//   margin: 1% 8%;
 
-  &__icons {
-    margin-left: -5em;
-  }
-}
+//   &__icons {
+//     margin-left: -5em;
+//   }
+// }
 
 hr.style-dotted-footer {
   background-color: $blue-primary;
