--- a/src/app/pages/about-us-page/extras/extras.component.html
+++ b/src/app/pages/about-us-page/extras/extras.component.html
@@ -1,1 +1,5 @@
-<p>extras works!</p>
+<app-text-info-block [title]="'VISION'" [text]="text"></app-text-info-block>
+<app-text-info-block [title]="'MISSION'" [text]="text"></app-text-info-block>
+<app-text-info-block [title]="'MOTTO'" [text]="text"></app-text-info-block>
+
+<app-more-to-explore [imageList]="imageList"></app-more-to-explore>
