--- a/src/app/pages/about-us-page/about-us/about-us.component.html
+++ b/src/app/pages/about-us-page/about-us/about-us.component.html
@@ -1,1 +1,17 @@
-<p>about-us works!</p>
+<app-text-info-block [title]="'ABOUT US'" [text]="text"></app-text-info-block>
+
+<div class="glance-component">
+  <div class="container">
+    <h3>At a Glance</h3>
+    <div class="row mt-5">
+      <div *ngFor="let item of aboutUsItems" class="col-md-3">
+        <div class="glance-item">
+          <h2>{{ item.value }}</h2>
+          <p>{{ item.info }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<app-more-to-explore [imageList]="imageList"></app-more-to-explore>
