--- a/src/app/components/text-info-block/text-info-block.component.html
+++ b/src/app/components/text-info-block/text-info-block.component.html
@@ -1,5 +1,8 @@
 <div class="text-info-block">
   <div class="container">
+    <h4 *ngIf="additionalText" class="text-left additionalText">
+      {{ additionalText }}
+    </h4>
     <h3>{{ title }}</h3>
     <div class="row mt-5">
       <p class="text-left col-md-9">{{ text }}</p>
