--- a/src/app/pages/about-us-page/history/history.component.html
+++ b/src/app/pages/about-us-page/history/history.component.html
@@ -1,1 +1,9 @@
-<p>history works!</p>
+<app-text-info-block
+  [title]="'SMALL WONDERS'"
+  [text]="text"
+  [additionalText]="'HISTORY OF'"
+></app-text-info-block>
+
+<app-accordion [accordionData]="accordionData"></app-accordion>
+
+<app-more-to-explore [imageList]="imageList"></app-more-to-explore>
