leadership component done

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,4 +1,7 @@
 $white-primary: #fff;
 $dark-primary: #8c8b8b;
+
 $button-primary: #8a2b3d;
 $blue-primary: #2e5077;
+
+$background-primary-light: #f9f6f1;
