--- a/src/app/pages/about-us-page/leadership/leadership.component.html
+++ b/src/app/pages/about-us-page/leadership/leadership.component.html
@@ -1,1 +1,21 @@
-<p>leadership works!</p>
+<app-image-text-info-block
+  [title]="'LEADERSHIP'"
+  [imgSrc]="'/assets/img/more-explore-2.png'"
+  [text]="text"
+></app-image-text-info-block>
+
+<div class="directors-section">
+  <div class="container">
+    <h3>BOARD OF DIRECTORS</h3>
+    <div class="row mt-5">
+      <div *ngFor="let item of directorsInfoList" class="col-md-4">
+        <app-image-intro-card
+          [imgSrc]="item.imgSrc"
+          [title]="item.title"
+          [subTitle]="item.subTitle"
+          [content]="item.content"
+        ></app-image-intro-card>
+      </div>
+    </div>
+  </div>
+</div>
