--- a/src/app/components/carousel-image-section/carousel-image-section.component.html
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel *ngIf="images">
+<ngb-carousel *ngIf="images" class="adjust-logo">
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
       <img [src]="images[0]" alt="Random first slide" />
