--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-container">
+<!-- <div class="navbar-container">
   <nav>
     <ul>
       <li>
@@ -75,13 +75,134 @@
       <i class="fa fa-envelope icon-margins" aria-hidden="true"></i>
       <button class="mbtn mbtn__secondary">{{ contactButtonText }}</button>
     </div>
-    <!-- logo -->
     <img src="assets/img/logo.png" alt="logo" class="logo-img" />
-    <!-- fa icons -->
     <div class="header-info-container__right">
       <i class="fa fa-facebook-official icon-margins" aria-hidden="true"></i>
       <i class="fa fa-instagram icon-margins" aria-hidden="true"></i>
       <i class="fa fa-youtube icon-margins" aria-hidden="true"></i>
+    </div>
+  </div>
+</div> -->
+
+<div>
+  <nav class="navbar navbar-light bg-white navbar-expand-lg">
+    <div class="top-nav">
+      <div class="container">
+        <div id="nav-collapse" class="navbar-collapse collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                [ngClass]="{
+                  'active-link': router.url == '/'
+                }"
+                class="nav-link pointer-icon"
+                (click)="navigateToHome()"
+              >
+                <i class="fa fa-home" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/about-us']"
+                [ngClass]="{
+                  'active-link': router.url == '/about-us'
+                }"
+                class="nav-link"
+                >About Us</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/curriculum']"
+                [ngClass]="{
+                  'active-link': router.url == '/curriculum'
+                }"
+                class="nav-link"
+                >Curriculum</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/admissions']"
+                [ngClass]="{
+                  'active-link': router.url == '/admissions'
+                }"
+                class="nav-link"
+                >Admissions</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/franchise']"
+                [ngClass]="{
+                  'active-link': router.url == '/franchise'
+                }"
+                class="nav-link"
+                >Franchise</a
+              >
+            </li>
+            <li class="nav-item">
+              <a [routerLink]="['/']" class="nav-link">Branches</a>
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/books-and-beyond']"
+                [ngClass]="{
+                  'active-link': router.url == '/books-and-beyond'
+                }"
+                class="nav-link"
+                >Books & Beyond</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                [routerLink]="['/events-and-gallery']"
+                [ngClass]="{
+                  'active-link': router.url == '/events-and-gallery'
+                }"
+                class="nav-link"
+                >Events & Gallery</a
+              >
+            </li>
+            <li class="nav-item">
+              <a [routerLink]="['/']" class="nav-link">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container bottom-nav">
+    <div class="row align-items-center">
+      <div class="col-md-4">
+        <div class="nleft">
+          <a href="#" class="envelope"><i class="fa fa-envelope"></i></a>
+          <a href="#" class="phone"
+            ><i class="fa fa-phone mr-2"></i> Call Us Today! (+91 1234 567
+            890)</a
+          >
+        </div>
+      </div>
+
+      <div class="text-center col-md-4">
+        <a
+          href="/"
+          aria-current="page"
+          target="_self"
+          class="navbar-brand logo-wrapper"
+        >
+          <img src="/assets/img/logo.png" class="header-logo" />
+        </a>
+      </div>
+
+      <div class="col-md-4">
+        <div class="nright">
+          <a href="#"><i class="fa fa-facebook-official"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-youtube"></i></a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
