curriculum and intro section added

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,3 @@
 <app-carousel-image-section [images]="images"></app-carousel-image-section>
+<app-home-intro-section></app-home-intro-section>
+<app-home-curriculum-section></app-home-curriculum-section>
