--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -17,6 +17,10 @@ h3 {
   font-family: "Cabin Sketch", cursive;
 }
 
+a {
+  text-decoration: none;
+}
+
 .navbar-container {
   background: $white-primary;
   margin-bottom: 3em;
@@ -60,19 +64,15 @@ h3 {
 }
 
 .mbtn {
-  padding: 0.6em 2em;
-  border-radius: 20px;
-  color: #fff;
-  font-size: 1em;
-  border: 0;
+  background: $button-primary;
+  padding: 10px 40px;
+  border-radius: 30px;
+  text-transform: uppercase;
   cursor: pointer;
+  color: $white-primary;
 
-  &__primary {
-    background-color: $button-primary;
-  }
-  &__secondary {
-    background-color: $dark-primary;
-    font-size: 0.75em;
+  &:hover {
+    color: $white-primary;
   }
 }
 
