welcome page branch carousel

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,4 @@
 <app-carousel-image-section [images]="images"></app-carousel-image-section>
 <app-home-intro-section></app-home-intro-section>
 <app-home-curriculum-section></app-home-curriculum-section>
+<app-branch-info-section></app-branch-info-section>
