--- a/src/app/pages/home-page/page-break-section/page-break-section.component.html
+++ b/src/app/pages/home-page/page-break-section/page-break-section.component.html
@@ -1,1 +1,20 @@
-<p>page-break-section works!</p>
+<div class="page-break-section">
+  <div class="pb_img_2"></div>
+  <div class="pb_img_3"></div>
+
+  <div class="container">
+    <div>
+      <h2>
+        if you're looking for <strong>a full day program</strong> small wonders
+        is for you
+      </h2>
+      <h3>
+        Our commitment is to be the best school possible. Contact us today to
+        see if we are a fit for you
+      </h3>
+    </div>
+    <div class="text-center mt-4">
+      <button class="btn mbtn">Know More</button>
+    </div>
+  </div>
+</div>
