--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -14,3 +14,5 @@
   [title]="'Recent Events'"
   [type]="'event'"
 ></app-home-curriculum-section>
+<app-contact-form></app-contact-form>
+<app-franchise-opportunity></app-franchise-opportunity>
