--- a/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
+++ b/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
@@ -1,3 +1,29 @@
 <div class="franchise-section">
-  <div class="container"></div>
+  <div class="fo_img_1"></div>
+  <div class="fo_img_2"></div>
+
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-sm-12 col-md-5 col-lg-5 franchise-section-block">
+        <div class="title_sec">
+          <h3 class="mb-0">
+            Franchise Opportunity
+          </h3>
+          <img src="/assets/img/card-divider.png" />
+          <p>
+            New Heights. New Opportunities
+          </p>
+        </div>
+        <p class="p2">
+          Join Small Wonders &amp; Take Advantage Of Our Momentum!
+        </p>
+        <button class="btn mbtn">
+          <i class="fa fa-phone"></i> Call Us Today! (+91 1234 567 890)
+        </button>
+      </div>
+      <div class="col-sm-12 col-md-5 col-lg-4">
+        <img src="/assets/img/franchiseKids.png" />
+      </div>
+    </div>
+  </div>
 </div>
