age break carousel

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -14,5 +14,8 @@
   [title]="'Recent Events'"
   [type]="'event'"
 ></app-home-curriculum-section>
+<app-school-age-break
+  [schoolAgeBreakList]="schoolAgeBreakList"
+></app-school-age-break>
 <app-contact-form></app-contact-form>
 <app-franchise-opportunity></app-franchise-opportunity>
