--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -18,5 +18,7 @@
   [schoolAgeBreakList]="schoolAgeBreakList"
 ></app-school-age-break>
 <app-contact-form></app-contact-form>
-<app-parents-testimonial></app-parents-testimonial>
+<app-parents-testimonial
+  [testimonialList]="testimonialList"
+></app-parents-testimonial>
 <app-franchise-opportunity></app-franchise-opportunity>
