--- a/src/app/pages/home-page/school-age-break/school-age-break.component.scss
+++ b/src/app/pages/home-page/school-age-break/school-age-break.component.scss
@@ -65,14 +65,14 @@
   }
 }
 
-.slide:nth-child(1) .age-break-box {
+.slide:nth-child(3n + 1) .age-break-box {
   background: #f5580a;
 }
 
-.slide:nth-child(2) .age-break-box {
+.slide:nth-child(3n + 2) .age-break-box {
   background: #05a70e;
 }
 
-.slide:nth-child(3) .age-break-box {
+.slide:nth-child(3n + 0) .age-break-box {
   background: #d2ba16;
 }
