--- a/src/app/components/carousel-image-section/carousel-image-section.component.scss
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.scss
@@ -1,3 +1,18 @@
 .adjust-logo {
   z-index: -1;
 }
+
+.slide-home-page {
+  width: 100%;
+  height: 30em;
+}
+
+.slide-1 {
+  background: url("/assets/img/home-greenboard-bg.png") no-repeat bottom;
+  background-size: cover;
+}
+
+.slide-2 {
+  background: url("/assets/img/home-greenboard-bg.png") no-repeat bottom;
+  background-size: cover;
+}
