--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-carousel-image-section [images]="images"></app-carousel-image-section>
+<app-carousel-image-section></app-carousel-image-section>
 <app-home-intro-section></app-home-intro-section>
 <app-home-curriculum-section
   [displayList]="curriculumList"
