image text comp

--- a/src/app/pages/curriculum-page/curriculum-page.component.html
+++ b/src/app/pages/curriculum-page/curriculum-page.component.html
@@ -1,4 +1,7 @@
-<app-image-section [image]="image"></app-image-section>
+<app-background-img-text
+  [bgImage]="image"
+  [title]="title"
+></app-background-img-text>
 <app-text-info-block-full
   [title]="sectionHeading1"
   [text]="sectionText1"
