--- a/src/app/pages/franchise-page/franchise-page.component.html
+++ b/src/app/pages/franchise-page/franchise-page.component.html
@@ -1,1 +1,5 @@
-<app-image-section [image]="image"></app-image-section>
+<app-background-img-text [title]="title"></app-background-img-text>
+<app-text-info-block-full
+  [title]="sectionHeading1"
+  [text]="sectionText1"
+></app-text-info-block-full>
