--- a/src/app/pages/franchise-page/franchise-page.component.html
+++ b/src/app/pages/franchise-page/franchise-page.component.html
@@ -3,4 +3,55 @@
   [title]="sectionHeading1"
   [text]="sectionText1"
 ></app-text-info-block-full>
+<div class="franchise-redirects">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div
+          class="d-flex flex-column justify-content-center align-items-center"
+        >
+          <div class="circle"></div>
+          <div class="block-heading"><p>Curriculum</p></div>
+          <p class="block-text">{{ redirectText1 }}</p>
+          <button
+            class="block-redirect-btn btn"
+            (click)="navigateTo('/curriculum')"
+          >
+            Learn More
+          </button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div
+          class="d-flex flex-column justify-content-center align-items-center"
+        >
+          <div class="circle"></div>
+          <div class="block-heading"><p>Our Activities</p></div>
+          <p class="block-text">{{ redirectText2 }}</p>
+          <button
+            class="block-redirect-btn btn"
+            (click)="navigateTo('/activities')"
+          >
+            Learn More
+          </button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div
+          class="d-flex flex-column justify-content-center align-items-center"
+        >
+          <div class="circle"></div>
+          <div class="block-heading"><p>About Us</p></div>
+          <p class="block-text">{{ redirectText3 }}</p>
+          <button
+            class="block-redirect-btn btn"
+            (click)="navigateTo('/about-us')"
+          >
+            Learn More
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <app-input-form></app-input-form>
