new child component added

--- a/src/app/pages/activities-page/activities-page.component.html
+++ b/src/app/pages/activities-page/activities-page.component.html
@@ -1,1 +1,5 @@
 <app-background-img-text [title]="title"></app-background-img-text>
+<app-corner-stone></app-corner-stone>
+<app-parents-testimonial
+  [testimonialList]="testimonialList"
+></app-parents-testimonial>
