activity page done

--- a/src/app/pages/activities-page/activities-page.component.html
+++ b/src/app/pages/activities-page/activities-page.component.html
@@ -1,4 +1,6 @@
 <app-background-img-text [title]="title"></app-background-img-text>
+<!-- router outlet goes here -->
+<router-outlet></router-outlet>
 <app-corner-stone></app-corner-stone>
 <app-parents-testimonial
   [testimonialList]="testimonialList"
