routing for subactivity pages

--- a/src/app/pages/activities-page/activities-list/activities-list.component.scss
+++ b/src/app/pages/activities-page/activities-list/activities-list.component.scss
@@ -12,6 +12,7 @@
   opacity: 0.9;
   margin: 0 2.5% 5% 2.5%;
   position: relative;
+  cursor: pointer;
 }
 .img_1 {
   //   background: url("/assets/img/kids_library.jpg") bottom;
