--- a/src/app/pages/activities-page/activities-list/activities-list.component.html
+++ b/src/app/pages/activities-page/activities-list/activities-list.component.html
@@ -1,37 +1,49 @@
 <div class="activities-list-section">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-5 img_1 activity_img">
+      <div
+        class="col-md-5 img_1 activity_img"
+        (click)="navigateTo('curricular')"
+      >
         <div class="header">
           <h1>Curricular</h1>
           <p>{{ sampleText }}</p>
         </div>
       </div>
-      <div class="col-md-5 img_2 activity_img">
+      <div
+        class="col-md-5 img_2 activity_img"
+        (click)="navigateTo('co-curricular')"
+      >
         <div class="header">
           <h1>Co-Curricular</h1>
           <p>{{ sampleText }}</p>
         </div>
       </div>
-      <div class="col-md-5 img_3 activity_img">
+      <div class="col-md-5 img_3 activity_img" (click)="navigateTo('sports')">
         <div class="header">
           <h1>Sports</h1>
           <p>{{ sampleText }}</p>
         </div>
       </div>
-      <div class="col-md-5 img_4 activity_img">
+      <div
+        class="col-md-5 img_4 activity_img"
+        (click)="navigateTo('stage-exposure')"
+      >
         <div class="header">
           <h1>Stage Exposure</h1>
           <p>{{ sampleText }}</p>
         </div>
       </div>
-      <div class="col-md-5 img_5 activity_img">
+      <div
+        class="col-md-5 img_5 activity_img"
+        (click)="navigateTo('discovery')"
+      >
         <div class="header">
           <h1>Discovery</h1>
           <p>{{ sampleText }}</p>
         </div>
       </div>
-      <div class="col-md-5 img_6 activity_img">
+      <div class="col-md-5 img_6 activity_img" (click)="navigateTo('clubs')">
         <div class="header">
           <h1>Clubs</h1>
           <p>{{ sampleText }}</p>
