--- a/src/app/pages/activities-page/activity-display/activity-display.component.html
+++ b/src/app/pages/activities-page/activity-display/activity-display.component.html
@@ -1,2 +1,31 @@
-<p>activity-display works!</p>
-<p>{{ activityName }}</p>
+<div class="activity-section">
+  <div class="ts_img_1"></div>
+  <div class="ts_img_2"></div>
+  <div class="container">
+    <div class="title_sec mb-5">
+      <h3>{{ activityName }}</h3>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <!-- slick carousel component -->
+        <ngx-slick-carousel
+          class="carousel"
+          #slickModal="slick-carousel"
+          [config]="slideConfig"
+          (init)="slickInit($event)"
+        >
+          <div
+            ngxSlickItem
+            *ngFor="let item of activityImageList"
+            class="slide"
+          >
+            <div class="activity-box">
+              <img [src]="item" alt="activity-img" />
+            </div>
+          </div>
+        </ngx-slick-carousel>
+      </div>
+    </div>
+  </div>
+</div>
