schedule tour page

--- a/src/app/pages/schedule-tour-page/schedule-tour-page.component.html
+++ b/src/app/pages/schedule-tour-page/schedule-tour-page.component.html
@@ -1,1 +1,5 @@
-<p>schedule-tour-page works!</p>
+<app-background-img-text [title]="title"></app-background-img-text>
+<app-location-explore
+  [locationList]="locationList"
+  [title]="locationExploreTitle"
+></app-location-explore>
