--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,55 +1,3 @@
-<!-- <div class="footer">
-  <div class="footer-top-bar">
-    <div class="custom-input-box">
-      <h3>Newsletter</h3>
-      <input type="email" placeholder="Email Address" />
-      <button class="mbtn mbtn__primary">Send</button>
-    </div>
-
-    <img src="assets/img/logo.png" alt="logo" class="logo-img" />
-
-    <div>
-      <h3>Parents Corner</h3>
-      <p>VISIT NOW &#8594;</p>
-    </div>
-  </div>
-  <hr class="style-dotted-footer" />
-  <nav>
-    <ul>
-      <li><i class="fa fa-home" aria-hidden="true"></i></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Curriculum</a></li>
-      <li><a href="#">Admissions</a></li>
-      <li><a href="#">Franchise</a></li>
-      <li><a href="#">Branches</a></li>
-      <li><a href="#">Books & Beyond</a></li>
-      <li><a href="#">Events & Gallery</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-  </nav>
-  <hr class="style-dotted-footer" />
-  <nav class="footer-secondary-nav">
-    <ul>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">Career at small wonders</a></li>
-      <li><a href="#">Admission form</a></li>
-      <li><a href="#">Schedule a tour</a></li>
-      <li><a href="#">Shoonya</a></li>
-    </ul>
-  </nav>
-
-  <div class="footer-info-bar">
-    <span> &#169;2019 SMALL WONDERS. All rights reserved.</span>
-    <div class="footer-info-bar__icons">
-      <i class="fa fa-facebook-official icon-margins" aria-hidden="true"></i>
-      <i class="fa fa-instagram icon-margins" aria-hidden="true"></i>
-      <i class="fa fa-youtube icon-margins" aria-hidden="true"></i>
-    </div>
-    <span>Made with &#10084; by SAM WEB STUDIO</span>
-  </div>
-</div> -->
-
 <div class="footerNew">
   <div class="container">
     <div class="row align-items-center">
@@ -84,30 +32,52 @@
           <a class="nav-link"><i class="fa fa-home"></i></a>
         </li>
         <li class="nav-item">
-          <a href="/about" class="nav-link" target="_self">About Us </a>
+          <a [routerLink]="['/about-us']" class="nav-link" target="_self"
+            >About Us
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Curriculum </a>
+          <a [routerLink]="['/curriculum']" class="nav-link" target="_self">
+            Curriculum
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Admissions </a>
+          <a [routerLink]="['/admissions']" class="nav-link" target="_self">
+            Admissions
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Franchise </a>
+          <a [routerLink]="['/franchise']" class="nav-link" target="_self">
+            Franchise
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Branches </a>
+          <a [routerLink]="['/activities']" class="nav-link" target="_self">
+            Activities
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Books &amp; Beyond </a>
+          <a
+            [routerLink]="['/books-and-beyond']"
+            class="nav-link"
+            target="_self"
+          >
+            Books &amp; Beyond
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self">
+          <a
+            [routerLink]="['/events-and-gallery']"
+            class="nav-link"
+            target="_self"
+          >
             Events &amp; Gallery
           </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Contact Us</a>
+          <a [routerLink]="['/']" class="nav-link" target="_self">
+            Contact Us</a
+          >
         </li>
       </ul>
     </div>
@@ -115,21 +85,27 @@
     <div class="footerNew-third-nav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link"> Blog </a>
+          <a class="nav-link" [routerLink]="['/blog']"> Blog </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self">
+          <a [routerLink]="['/']" class="nav-link" target="_self">
             Career at small wonders
           </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Admission form </a>
+          <a [routerLink]="['/admissions']" class="nav-link" target="_self">
+            Admission form
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Schedule a tour </a>
+          <a [routerLink]="['/schedule-tour']" class="nav-link" target="_self">
+            Schedule a tour
+          </a>
         </li>
         <li class="nav-item">
-          <a href="/#" class="nav-link" target="_self"> Shoonya </a>
+          <a [routerLink]="['/shoonya']" class="nav-link" target="_self">
+            Shoonya
+          </a>
         </li>
       </ul>
     </div>
