location explore responsive

--- a/src/app/pages/schedule-tour-page/location-explore/location-explore.component.scss
+++ b/src/app/pages/schedule-tour-page/location-explore/location-explore.component.scss
@@ -46,8 +46,9 @@
 }
 
 .location-explore-box {
-  width: 16em;
+  width: 85%;
   text-align: left;
+  margin: auto;
 
   h2 {
     color: $button-primary;
@@ -61,5 +62,18 @@
       text-transform: uppercase;
       font-weight: bold;
     }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .location-explore-box {
+    width: 85%;
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .location-explore-box {
+    width: 100%;
   }
 }
