--- a/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
+++ b/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="row justify-content-center">
-      <div class="col-lg-10">
+      <div class="col-lg-10 col-10">
         <!-- slick carousel component -->
         <ngx-slick-carousel
           class="carousel"
