--- a/src/app/components/carousel-image-section/carousel-image-section.component.html
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.html
@@ -10,12 +10,43 @@
   <div class="carousel-inner" role="listbox">
     <!--First slide-->
     <div class="carousel-item active slide-home-page slide-1">
-      <div class="container text-center"></div>
+      <div class="container text-center h100">
+        <div
+          class="d-flex flex-column align-items-center justify-content-center h100"
+        >
+          <h2>Be different Be a wonderian</h2>
+          <h1>
+            <span>Great Place for Your</span><span>Child to Grow at</span>
+          </h1>
+        </div>
+        <img
+          src="/assets/img/arrow-down.png"
+          alt="arrow-down"
+          class="arrow-down"
+          (click)="navigateToHomeIntro()"
+        />
+      </div>
     </div>
     <!--/First slide-->
     <!--Second slide-->
     <div class="carousel-item slide-home-page slide-2">
-      <div class="container text-center"></div>
+      <div class="container text-center h100">
+        <div
+          class="d-flex flex-column align-items-start justify-content-center h100"
+        >
+          <h2>Welcome to Small Wonders</h2>
+          <h1>
+            <span>We teach children how to</span
+            ><span>think, not what to think</span>
+          </h1>
+        </div>
+        <img
+          src="/assets/img/arrow-down.png"
+          alt="arrow-down"
+          class="arrow-down"
+          (click)="navigateToHomeIntro()"
+        />
+      </div>
     </div>
     <!--/Second slide-->
   </div>
