footer mobile responsive

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footerNew">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-4">
+    <div class="row align-items-center footerNew-top-section">
+      <div class="col-lg-4 col-md-12">
         <h3>Newsletter</h3>
         <div class="input-group">
           <input
@@ -17,10 +17,10 @@
         </div>
       </div>
 
-      <div class="col-md-4 text-center">
+      <div class="col-lg-4 col-md-6 col-6 text-center img-section">
         <img src="assets/img/logo.png" alt="logo" class="logo-img-footer" />
       </div>
-      <div class="col-md-4 text-right">
+      <div class="col-lg-4 col-md-6 col-6 text-right text-section">
         <h3>Parents Corner</h3>
         <p>VISIT NOW &#8594;</p>
       </div>
@@ -111,10 +111,11 @@
     </div>
 
     <div class="row align-items-center footerNew-fourth-nav">
-      <div class="col-md-4">
-        <span> &#169;2019 SMALL WONDERS. All rights reserved.</span>
+      <div class="col-md-4 col-6">
+        <span> &#169;2019 SMALL WONDERS.</span
+        ><span> All rights reserved.</span>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 col-6 text-center">
         <div class="footer-info-bar">
           <a href=""
             ><i class="fa fa-facebook-official" aria-hidden="true"></i
@@ -123,8 +124,8 @@
           <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
         </div>
       </div>
-      <div class="col-md-4 text-right">
-        <span>Made with &#10084; by SAM WEB STUDIO</span>
+      <div class="col-md-4 col-12 text-right footer-bottom-text">
+        <span>Made with &#10084; by TECHSTASY TECHNOLOGIES</span>
       </div>
     </div>
   </div>
