--- a/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
+++ b/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
@@ -1,6 +1,6 @@
 <div class="franchise-section">
   <div class="fo_img_1"></div>
-  <div class="fo_img_2"></div>
+  <div class="desktop-wrapper fo_img_2"></div>
 
   <div class="container">
     <div class="row justify-content-center text-center">
@@ -21,7 +21,7 @@
           <i class="fa fa-phone"></i> Call Us Today! (+91 1234 567 890)
         </button>
       </div>
-      <div class="col-sm-12 col-md-5 col-lg-4">
+      <div class="col-sm-12 col-md-5 col-lg-4 franchiseKids">
         <img src="/assets/img/franchiseKids.png" />
       </div>
     </div>
