--- a/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
+++ b/src/app/pages/home-page/parents-testimonial/parents-testimonial.component.html
@@ -1,5 +1,5 @@
 <div class="testimonial-section">
-  <div class="ts_img_1"></div>
+  <div class="ts_img_1 desktop-wrapper"></div>
   <div class="ts_img_2"></div>
   <div class="container">
     <div class="title_sec">
@@ -10,7 +10,7 @@
     </div>
 
     <div class="row justify-content-center">
-      <div class="col-lg-10">
+      <div class="col-lg-10 col-md-10 col-10">
         <!-- slick carousel component -->
         <ngx-slick-carousel
           class="carousel"
