mobile responsive done

--- a/src/app/components/carousel-info-card-event/carousel-info-card-event.component.html
+++ b/src/app/components/carousel-info-card-event/carousel-info-card-event.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="curr-box" style="width: 18em; display: inline-block;">
+  <div class="curr-box">
     <a href="/#" class=""
       ><figure><img [src]="imgSrc" /></figure>
       <div class="event-card-date">
