--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.scss
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.scss
@@ -22,7 +22,8 @@
 .branch-info-card {
   padding: 7px;
   min-height: 8em;
-  width: 18em;
+  width: 90%;
+  margin: auto;
   position: relative;
 
   a {
@@ -101,4 +102,14 @@
 ::ng-deep .next-slide {
   background: url(/assets/img/next-item.png) no-repeat;
   right: -50px !important;
+}
+
+@media only screen and (max-width: 1000px) {
+  .branch-info-card {
+    width: 80%;
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) {
 }
