--- a/src/app/components/carousel-info-card-event/carousel-info-card-event.component.scss
+++ b/src/app/components/carousel-info-card-event/carousel-info-card-event.component.scss
@@ -4,9 +4,15 @@
   background: #fff;
   border-radius: 15px;
   text-align: center;
+  width: 90%;
+  margin: auto;
 
   a {
     text-decoration: none;
+  }
+
+  img {
+    width: 100%;
   }
 }
 
@@ -38,4 +44,10 @@
   font-size: 12px;
   color: #333;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 1000px) {
+  .curr-box {
+    width: 80%;
+  }
 }
