--- a/src/app/components/carousel-info-card/carousel-info-card.component.html
+++ b/src/app/components/carousel-info-card/carousel-info-card.component.html
@@ -1,6 +1,6 @@
 <!-- used for curriculum section on home page -->
 <div>
-  <div class="curr-box" style="width: 18em; display: inline-block;">
+  <div class="curr-box">
     <a href="/#" aria-current="page"
       ><figure><img [src]="imgSrc" class="card-img" /></figure>
       <h3>{{ title }}</h3>
