--- a/src/app/components/carousel-info-card/carousel-info-card.component.scss
+++ b/src/app/components/carousel-info-card/carousel-info-card.component.scss
@@ -2,6 +2,8 @@
   background: #fff;
   border-radius: 15px;
   text-align: center;
+  width: 90%;
+  margin: auto;
 }
 
 .curr-box-desc {
@@ -24,4 +26,10 @@
 
 .divider-img {
   display: unset;
+}
+
+@media only screen and (max-width: 1000px) {
+  .curr-box {
+    width: 80%;
+  }
 }
