--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
@@ -19,8 +19,10 @@
             <!-- branch info card-->
             <div class="branch-info-card">
               <a href="/#" class="row"
-                ><figure class="col-lg-4"><img [src]="item.imgSrc" /></figure>
-                <div class="col-lg-8">
+                ><figure class="col-lg-4 col-4">
+                  <img [src]="item.imgSrc" />
+                </figure>
+                <div class="col-lg-8 col-8">
                   <p class="branch-info-card-title">{{ item.title }}</p>
                   <p class="subText">{{ item.address }}</p>
                   <p class="subText">
