--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -5,10 +5,10 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-5 text-center">
+      <div class="col-md-5 order-12 order-md-1 text-center">
         <img src="/assets/img/rainbow-kid.png" class="contact-form-image" />
       </div>
-      <div class="col-md-7 text-left">
+      <div class="col-md-7 order-1 order-md-12 text-left">
         <div class="con-form">
           <h3>Contact Us</h3>
           <p>You have questions? Contact us today, we’re here to help.</p>
