books and beyond

--- a/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.html
+++ b/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.html
@@ -1,1 +1,10 @@
-<app-image-section [image]="image"></app-image-section>
+<app-background-img-text [title]="title"></app-background-img-text>
+<app-learning-intro
+  [title]="introSectionTitle"
+  [content]="introSectionContent"
+  [contentList]="introSectionContentList"
+></app-learning-intro>
+<app-learning-env-section
+  [title]="envSectionTitle"
+  [contentList]="contentList"
+></app-learning-env-section>
